# FNC

./: .gitignore  README.en.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons_backup_20260326_081827/: icon.icns
src-tauri/linux/: FNCViewer.desktop  fncviewer.xml  postrm.sh
src-tauri/src/: lib.rs  main.rs
src-tauri/target-pack/: .rustc_info.json
src-tauri/target-pack/release/: fncviewer.d
src-tauri/target-pack/release/.fingerprint/adler2-745c9f01be06062f/: lib-adler2  lib-adler2.json
src-tauri/target-pack/release/.fingerprint/aho-corasick-a422dd694b6da5f5/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-pack/release/.fingerprint/aho-corasick-c268f6e793d9b1b0/: lib-aho_corasick  lib-aho_corasick.json
src-tauri/target-pack/release/.fingerprint/alloc-no-stdlib-4182125af05f3651/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-pack/release/.fingerprint/alloc-no-stdlib-499ce5b9a9d0dc19/: lib-alloc_no_stdlib  lib-alloc_no_stdlib.json
src-tauri/target-pack/release/.fingerprint/alloc-stdlib-6967021530912d84/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-pack/release/.fingerprint/alloc-stdlib-e696a87cbc52974a/: lib-alloc_stdlib  lib-alloc_stdlib.json
src-tauri/target-pack/release/.fingerprint/anyhow-047ec9a2e6b7646c/: lib-anyhow  lib-anyhow.json
src-tauri/target-pack/release/.fingerprint/anyhow-8228984b21dcdebb/: lib-anyhow  lib-anyhow.json
(+1014 files in other folders)
