[package]
name = "fncviewer"
version = "0.1.0"
description = "FNCViewer Cross-Platform"
authors = ["FNCViewer Team"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "fncviewer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
encoding_rs = "0.8"
tauri-plugin-dialog = "2.6.0"
url = "2.5"
